After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756186 - dashdemux: cannot advance to next period
dashdemux: cannot advance to next period
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-07 13:19 UTC by Florin Apostol
Modified: 2015-10-11 10:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.46 KB, patch)
2015-10-07 13:23 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-10-07 13:19:17 UTC
When trying to advance to the next period, the adaptive demux calls gst_adaptive_demux_has_next_period which will end up calling gst_mpd_client_has_next_period.

But due to some recent changes in dashdemux, the gst_mpd_client_setup_media_presentation will no longer prepare all periods. The gst_mpd_client_has_next_period function needs to call gst_mpd_client_setup_media_presentation to update the period information.
Comment 1 Florin Apostol 2015-10-07 13:23:32 UTC
Created attachment 312825 [details] [review]
proposed patch
Comment 2 Sebastian Dröge (slomo) 2015-10-07 14:50:27 UTC
Comment on attachment 312825 [details] [review]
proposed patch

Thanks!
Comment 3 Sebastian Dröge (slomo) 2015-10-07 14:50:39 UTC
commit 1d1094b71b46f654a9778a042be1bfd9a87ba7cf
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Wed Oct 7 14:22:46 2015 +0100

    dashdemux: fixed has_next_period
    
    gst_mpd_client_has_next_period now calls gst_mpd_client_setup_media_presentation
    to refresh the period information.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756186